Bug 570605 - [16] [records] No error reported for local class extending sealed class inside a local record
Change-Id: Iaba9eb0c89135241df262ef8ea54537f9d0c337d
Signed-off-by: Manoj Palat <manpalat@in.ibm.com>